<resources>
  <string name="app_name">Hello Resources</string>

  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>

  <string name="hello">Hello Resources!</string>
  <string name="button1">Button 1</string>
  <string name="button2">Button 2</string>
  <string name="button3">Button 3</string>
  <string name="button4">Button 4</string>
</resources>
