<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="16dp"
              android:paddingRight="16dp"
              android:paddingTop="16dp"
              android:paddingBottom="16dp"
              android:orientation="vertical"
              tools:context=".MainActivity">

  <TextView
    android:id="@+id/text1"
    android:text="@string/hello"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="24sp"
    android:textStyle="bold" />
  <Button
    android:id="@+id/button1"
    android:text="@string/button1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

  <Button
    android:id="@+id/button2"
    android:text="@string/button2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
      android:id="@+id/button3"
      android:text="@string/button3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />

    <Button
      android:id="@+id/button4"
      android:text="@string/button4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />
  </LinearLayout>

</LinearLayout>